# personal-ai-agent

./: .coverage  .env.example  .gitignore  ALL_FIXES_COMPLETE_SUMMARY.md  BENCHMARK_COMPLETE.md  CHAT_MEMORY_IMPLEMENTATION.md  DEPLOYMENT_CHAT_MEMORY.md  DEPLOYMENT_QUICKSTART.md  ERROR_SUMMARY.md  EXTRACTION_ERROR_FIX.md  FIX1_REMINDER_PATTERNS_SUMMARY.md  FIX2_TRUTH_GATE_SUMMARY.md  FIX3_LLM_FALLBACK_SUMMARY.md  FIX_SUMMARY_NTFY_LOOPS.md  GGUF_DEPLOYMENT_FIX.md  HYGIENE_OPS_HARDENING_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LLAMACPP_BRINGUP_SUMMARY.md  MORNING_BRIEFING_GOALS_VERIFICATION.md  MULTI_CHANNEL_NOTIFICATIONS.md  Makefile  PHASE2C_COMPLETION_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PHASE4_COMPLETE.md  PHASE4_COMPLETION_SUMMARY.md  PHASE5_COMPLETION_SUMMARY.md  QUICK_REFERENCE_ALL_FIXES.md  QUICK_REFERENCE_NOTIFICATIONS.md  README.md  REAL_IMPLEMENTATION_SUMMARY.md  REMINDER_INTENT_UPGRADE_SUMMARY.md  SECURITY.md  SELF_UPGRADE_SUMMARY.md  WEEK3_SUMMARY.md  benchmark_results.json  cleanup.sh  docker-compose.yml  milton_outputs  milton_queue.py  (+8 more)
agent_logging/: __init__.py  setup.py
agents/: __init__.py  base.py  contracts.py  cortex.py  demo_kg_nexus.py  frontier.py  frontier_cache.py  kg_context.py  memory_hooks.py  nexus.py  tool_registry.py
benchmarks/: README.md  __init__.py  measure.py  prompts.py  schema.py  select.py
deployment/: README.md  __init__.py  deployment_manager.py  edge_packager.py
diagnostics/: __init__.py  __main__.py  milton_probe.py  requirements.txt
docs/: 01-vision.md  02-current-state.md  03-roadmap.md  (+50 more)
(+389 files in other folders)
