[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "milton-orchestrator"
version = "1.0.0"
description = "Voice-to-Code Orchestrator for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Milton Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
milton-orchestrator = "milton_orchestrator.cli:main"
milton-reminders = "milton_orchestrator.reminders_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["milton_orchestrator*", "self_upgrade*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "integration: tests that require network/external services or are long-running system-level (opt-in via RUN_INTEGRATION=1)",
    "optional_component: tests for optional components not installed by default",
    "asyncio: asyncio-based tests (requires pytest-asyncio)",
]
